fixed spacing issues on all sections

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -268,11 +268,13 @@ h4 {
 
 @media only screen and (max-width: 1300px) {
   .featured-info {
-    width: 90vw;
+    // width: 90vw;
+    width: 320px;
     top: 230px;
     align-items: flex-start;
     margin-bottom: 200px;
-    margin-right: -10px;
+    // margin-right: -10px;
+    height: auto;
   }
 
   .featured-info .left {
@@ -280,20 +282,22 @@ h4 {
   }
 // change 
   .featured-info.second {
-    margin-left: -10px;
+    // margin-left: -10px;
   }
 
   .featured-image-container {
-    width: 90vw;
-    margin-left: -10px;
+    // width: 90vw;
+    width: 320px;
+    // margin-left: -10px;
   }
 
   .featured-image-container, second {
-    width: 90vw;
-    margin-right: -10px;
+    // width: 90vw;
+    // margin-right: -10px;
   }
 
   .featured-container {
+    margin-top: 0;
     margin-bottom: 600px;
     height: 200px;
   }
@@ -445,6 +449,7 @@ ul {
 @media only screen and (max-width: 1300px) {
   #contact {
     margin: 0px 0 100px 0;
+    height: auto;
   }
 }
 
@@ -532,7 +537,7 @@ ul {
 }
 
 .certification-container {
-    height: 300px;
+    height: 225px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -541,6 +546,7 @@ ul {
 @media only screen and (max-width: 1300px) {
   .certification-container {
     flex-direction: column;
+    height: 355px;
   }
 }
 
